<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.hello09x.fakeplayer</groupId>
        <artifactId>fakeplayer-parent</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>fakeplayer-core</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.github.hello09x.fakeplayer</groupId>
            <artifactId>fakeplayer-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.tanyaofei.devtools</groupId>
            <artifactId>devtools-core</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.tanyaofei.devtools</groupId>
            <artifactId>devtools-command</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.tanyaofei.devtools</groupId>
            <artifactId>devtools-database</artifactId>
        </dependency>

        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>dev.jorel</groupId>
            <artifactId>commandapi-bukkit-core</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>brigadier</artifactId>
            <version>1.1.8</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>4.1.82.Final</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.jikoo</groupId>
            <artifactId>OpenInv</artifactId>
            <version>5.1.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/OpenInv.jar</systemPath>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>